IC-Test/objects/IntegrationStatus__c.object
<CustomObject>
    <description>Holds information related to Java Integration Process health</description>
    <fields>
        <fullName>DetailedMessage__c</fullName>
        <description>This can be picked up from the Message.properties or errors returned from SFDC in SaveResults object. Body/Message of the emails.</description>
        <label>Detailed Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExecutionStartTimestamp__c</fullName>
        <description>When this process execution started. Value in this field will be same for all the IntegrationStatus records created by a process run.
When looking at Process Completion View (for Nightly Batch Process), this field displays Start Time of Upload Process, not start time of Mirror Process. We do not need to create End Timestamp field because Creation time of this record will be same as EndTime of Upload Process (SFDC Integration).</description>
        <label>Execution Start Timestamp</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessName__c</fullName>
        <description>Name of the Process, like CPP Process or Nightly Batch Process.</description>
        <label>Process Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessSubType__c</fullName>
        <description>Process SubTypes are different tasks done by the Integration application and they are:
• Insert New Corporate Accounts
• Update Updated Corporate Accounts
• Upadte ParentId of Updated ShipTo Accounts
• Insert New ShipTo Accounts
• Update Updated ShipTo Accounts
• Update ShipTo Accounts Owner Change
• Update Prospect Account Sales Hierarchy
• Update CPP Picklists ID
• Update ChemCare Picklists ID</description>
        <label>Process SubType</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>‘F’ or ‘S’ – This tells if the process was Successful or not</description>
        <label>Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SummaryMessage__c</fullName>
        <description>Subject of the emails. This is being picked up from the Message.properties file.</description>
        <label>Summary Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Defines the type of IntegrationStatus record.
I - INFO 
A - ALERT 
E – ERROR</description>
        <label>Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Integration Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SummaryMessage__c</columns>
        <columns>ProcessName__c</columns>
        <columns>DetailedMessage__c</columns>
        <columns>ExecutionStartTimestamp__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Type__c</columns>
        <columns>ProcessSubType__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllbyDate</fullName>
        <columns>ExecutionStartTimestamp__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>ProcessName__c</columns>
        <columns>Status__c</columns>
        <columns>DetailedMessage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All by Date</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CorporateAccountsNew</fullName>
        <columns>NAME</columns>
        <columns>ProcessName__c</columns>
        <columns>ExecutionStartTimestamp__c</columns>
        <columns>ProcessSubType__c</columns>
        <columns>SummaryMessage__c</columns>
        <columns>DetailedMessage__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProcessSubType__c</field>
            <operation>equals</operation>
            <value>Insert New Corporate Accounts</value>
        </filters>
        <label>Corporate Accounts - New</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CorporateAccountsOwnerChange</fullName>
        <columns>NAME</columns>
        <columns>ProcessName__c</columns>
        <columns>ExecutionStartTimestamp__c</columns>
        <columns>ProcessSubType__c</columns>
        <columns>SummaryMessage__c</columns>
        <columns>DetailedMessage__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProcessSubType__c</field>
            <operation>equals</operation>
            <value>Update Updated Corporate Accounts</value>
        </filters>
        <label>Corporate Accounts - Owner Change</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NewShipToAccountsErrors</fullName>
        <columns>NAME</columns>
        <columns>ProcessName__c</columns>
        <columns>ProcessSubType__c</columns>
        <columns>ExecutionStartTimestamp__c</columns>
        <columns>SummaryMessage__c</columns>
        <columns>DetailedMessage__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProcessSubType__c</field>
            <operation>equals</operation>
            <value>Insert New ShipTo Accounts</value>
        </filters>
        <label>New ShipTo Accounts - Errors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NightlyBatchProcessCompletionSummary</fullName>
        <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>ProcessName__c</columns>
        <columns>ExecutionStartTimestamp__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>SummaryMessage__c</columns>
        <columns>DetailedMessage__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProcessName__c</field>
            <operation>equals</operation>
            <value>Nightly Batch Process</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>I</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Nightly Batch Process Completion Summary</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ShipToAccountsOwnrChgErrors</fullName>
        <columns>NAME</columns>
        <columns>ProcessName__c</columns>
        <columns>ProcessSubType__c</columns>
        <columns>ExecutionStartTimestamp__c</columns>
        <columns>SummaryMessage__c</columns>
        <columns>DetailedMessage__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProcessSubType__c</field>
            <operation>equals</operation>
            <value>Update ShipTo Accounts Owner Change</value>
        </filters>
        <label>ShipTo Accounts Ownr Chg - Errors</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Integration Status Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>